--- a/src/app/pharma/formula/formula.component.html
+++ b/src/app/pharma/formula/formula.component.html
@@ -1,7 +1,19 @@
 <form [formGroup]="form" (keyup)="update()">
-  <input type="number" formControlName="weight" /> kg *
-  <input type="number" formControlName="targetDose" /> mg/kg/jour *
-  (1 / {{currentSpecialty.mgPerMl}}) ml/mg =
-  {{dailyMl}} ml/jour =
-  {{intakeMl}} ml (<input type="number" formControlName="intakes" /> fois par jour)
+  <div>
+    <label for="specialty">Spécialité : </label>
+    <select id="specialty" formControlName="mgPerMl">
+      <option *ngFor="let specialty of specialtyService.getSpecialties()" [value]="specialty.mgPerMl">{{specialty.name}}</option>
+    </select>
+  </div>
+  <div>
+    <input type="number" formControlName="weight" /> kg &times;
+    <input type="number" formControlName="targetDose" /> mg/kg/jour &times;
+    (1/{{currentMgPerMl}}) ml/mg
+  </div>
+  <div>
+    => {{dailyMl}} ml/jour
+  </div>
+  <div>
+    => {{intakeMl}} ml (<input type="number" formControlName="intakes" /> fois par jour)
+  </div>
 </form>
