--- a/src/app/pharma/formula/formula.component.html
+++ b/src/app/pharma/formula/formula.component.html
@@ -8,7 +8,7 @@
   <div>
     <input type="number" formControlName="weight" /> kg &times;
     <input type="number" formControlName="targetDose" /> mg/kg/jour &times;
-    (1/{{currentMgPerMl}}) ml/mg
+    (1/{{form.controls.mgPerMl.value}}) ml/mg
   </div>
   <div>
     => {{dailyMl}} ml/jour
