Clean layout with Clarity.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,8 @@
-<app-formula></app-formula>
-<router-outlet></router-outlet>
+<clr-main-container>
+  <div class="content-container">
+    <div class="content-area">
+      <app-formula></app-formula>
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+</clr-main-container>
