Use proper routing and update app name.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,12 @@
 <clr-main-container>
+  <header class="header-6">
+    <div class="branding">
+      <a href="">
+        <span class="title">Pharm'Assist</span></a>
+    </div>
+  </header>
   <div class="content-container">
     <div class="content-area">
-      <app-formula></app-formula>
       <router-outlet></router-outlet>
     </div>
   </div>
