Fix label for prescribed dosage and update libs.

--- a/src/app/formuli/specialty-dosage/specialty-dosage.component.html
+++ b/src/app/formuli/specialty-dosage/specialty-dosage.component.html
@@ -11,7 +11,7 @@
       <input clrInput type="number" formControlName="weight" />
     </clr-input-container>
     <clr-input-container>
-      <label for="targetDose">Dose journalière [mg]</label>
+      <label for="targetDose">Dose journalière prescrite par kilogramme [mg/kg/jour]</label>
       <input clrInput type="number" formControlName="targetDose" />
     </clr-input-container>
     <clr-input-container>
